# barry

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  todo.md
backend/: .dockerignore  DEPLOY.md  Dockerfile  UNRAID.md  docker-compose.yml  fly.toml  pyproject.toml
backend/app/: __init__.py  cache.py  front.py  interpreter.py  main.py  models.py  scheduler.py  service.py  stations.py  tendency.py  verdict.py
backend/app/sources/: aviationweather.py  iem.py  openmeteo.py
backend/backtest/: RESULTS.md  fetch_iem.py  results_full.txt  results_holdout_2024.txt  run_backtest.py
backend/tests/: conftest.py  test_front.py  test_hrrr.py  test_interpreter.py  test_service.py  test_tendency.py  test_verdict.py
ci_scripts/: ci_post_clone.sh
ios/: README.md  project.yml
ios/Barry.xcodeproj/: project.pbxproj
ios/Barry/PhoneWidget/: BarryPhoneWidget.swift  Info.plist  PhoneWidgetViews.swift
ios/Barry/Shared/: AppConfig.swift  BarryAPI.swift  Interpreter.swift  LocationManager.swift  Models.swift  PressureHistory.swift  PressureStore.swift  PressureUnit.swift  RangeAnalysis.swift  SavedLocations.swift  SharedSnapshot.swift  Tendency.swift  WindUnit.swift
ios/Barry/WatchApp/: BarryWatch.entitlements  BarryWatchApp.swift  Info.plist  WatchContentView.swift  WatchSettingsView.swift
ios/Barry/WatchComplication/: BarryComplication.entitlements  BarryComplication.swift  ComplicationDial.swift  ComplicationViews.swift  Info.plist  RectangularComplications.swift  TendencyProvider.swift
ios/Barry/iOSApp/: BackgroundRefresh.swift  BarometerManager.swift  BarryApp.swift  (+14 more)
(+3 files in other folders)
